--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,3 +11,10 @@ repos:
     -   id: name-tests-test
     -   id: double-quote-string-fixer
     -   id: requirements-txt-fixer
+
+-   repo: https://github.com/Yelp/detect-secrets
+    rev: v1.0.0
+    hooks:
+    -   id: detect-secrets
+        args: ['--baseline', '.secrets.baseline']
+        exclude: package.lock.json
